# Medical-Chatbot

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  Jenkinsfile  LICENSE  PROJECT_STRUCTURE.md  README.md  init_vector_store.py  pyproject.toml  requirements.txt  setup.py
app/components/: embeddings.py  llm.py  retriever.py
app/config/: config.py
app/templates/: index.html
custom_jenkins/: Dockerfile
