[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Medical-Chatbot"
version = "0.1.0"
authors = [{ name = "Anish Konda" }]
description = "A medical chatbot project."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "faiss-cpu",
    "pypdf",
    "python-dotenv",
    "flask",
    "huggingface-hub"
]

[tool.setuptools.packages.find]
where = ["."]
