[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Medical-Chatbot"
version = "0.1.0"
authors = [{ name = "Anish Konda" }]
description = "A medical chatbot project."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface",
    "faiss-cpu",
    "pypdf",
    "python-dotenv",
    "flask",
    "huggingface-hub",
    "langchain_groq",
    "sentence-transformers>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
